# wordle

./: .gitignore  CMakeLists.txt  Echo.h  ParallelExec.h  README.md  WordleConstants.h  WordleGame.h  WordleSecrets.h  WordleStrat.h  WordleStratEntropy.h  app.py  database.db  main.cpp  wordle_config.py
static/: words4.txt  words5.txt  words6.txt
templates/: leaderboard.html
